# simp-cal

./: .gitignore  :q  Cargo.toml  README.md  coverage.sh
example/: Cargo.toml
example/src/: helpme.txt  main.rs
src/: eval.rs  expression.rs  helpme.txt  lib.rs  main.rs  operator.rs  token.rs
src/tests/: eval_test.rs  examples.rs  expression_test.rs  operator_test.rs  token_test.rs
