[package]
name = "simp-cal"
version = "0.2.6"
edition = "2024"
description = "Converts text calculations into expressions then can calculate them"
license-file = "LICENSE"
repository = "https://github.com/Blockitifluy/simp-cal"
keywords = ["calculator"]
categories = ["calculator"]

[dependencies]

[profile.release]
strip = true
opt-level = "z"
lto = true
